[gd_scene load_steps=16 format=3 uid="uid://d0lpgflcl3g2h"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_fotvq"]
[ext_resource type="Texture2D" uid="uid://0p5agevu7aqj" path="res://assets/UIassets/Background/BackgroundWIP.png" id="2_lp2fs"]
[ext_resource type="Texture2D" uid="uid://blak5420nx6yu" path="res://assets/UIassets/Buttons/ButtonWIP.png" id="3_3scn5"]
[ext_resource type="Texture2D" uid="uid://dpt4cfr3sm3na" path="res://assets/UIassets/Buttons/ClickUpgradeWIP.png" id="4_h4cb1"]
[ext_resource type="Texture2D" uid="uid://nmvgg2gg11bi" path="res://assets/UIassets/Buttons/PassiveUpgradeWIP.png" id="5_gm1vf"]
[ext_resource type="Texture2D" uid="uid://cp5q8pt66pb4b" path="res://assets/UIassets/Background/MiscUpgradeWIP.png" id="5_gqx5s"]
[ext_resource type="Texture2D" uid="uid://cvgxsk56nicrq" path="res://assets/UIassets/SideMenuWIP.png" id="6_2quv8"]
[ext_resource type="Texture2D" uid="uid://dv7ctjvj77ggb" path="res://assets/UIassets/Buttons/BackWIP.png" id="6_ondub"]
[ext_resource type="Texture2D" uid="uid://cjyuh8n465h17" path="res://assets/UIassets/Buttons/IAPButtonWIP.png" id="7_51t22"]
[ext_resource type="Texture2D" uid="uid://byomeo0i54u7g" path="res://assets/UIassets/Background/PassUpgradeWIP.png" id="7_np1i2"]
[ext_resource type="Texture2D" uid="uid://j3806usw5pba" path="res://assets/UIassets/Background/InAppShopWIP.png" id="8_xbo1h"]
[ext_resource type="Texture2D" uid="uid://b3iqdkvsgbjyo" path="res://assets/UIassets/Buttons/ShmonyStoreWIP.png" id="10_5lrp8"]
[ext_resource type="Texture2D" uid="uid://dwaw2jv0r22yt" path="res://assets/UIassets/Background/ShmoneyStoreWIP.png" id="11_lkuwl"]
[ext_resource type="Script" path="res://assets/scripts/MiscUp.gd" id="14_w8sl8"]

[sub_resource type="GDScript" id="GDScript_ak56l"]
script/source = "extends CanvasLayer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass
"

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fotvq")

[node name="canvas" type="CanvasLayer" parent="."]
script = SubResource("GDScript_ak56l")

[node name="Timer" type="Timer" parent="canvas"]

[node name="Background" type="Sprite2D" parent="canvas"]
light_mask = 16
visibility_layer = 16
position = Vector2(288.5, 437.5)
scale = Vector2(1.1375, 0.825781)
texture = ExtResource("2_lp2fs")

[node name="Clock" type="RichTextLabel" parent="canvas"]
offset_left = 422.0
offset_top = -4.0
offset_right = 604.0
offset_bottom = 141.0
theme_override_font_sizes/normal_font_size = 75
text = "time"

[node name="Points" type="RichTextLabel" parent="canvas"]
offset_left = 108.0
offset_top = 83.0
offset_right = 676.0
offset_bottom = 249.0
theme_override_font_sizes/normal_font_size = 75
text = "points"

[node name="Money" type="RichTextLabel" parent="canvas"]
offset_left = 47.0
offset_top = 14.0
offset_right = 309.0
offset_bottom = 150.0
theme_override_font_sizes/normal_font_size = 75
text = "$"
scroll_active = false

[node name="TextureButton" type="TextureButton" parent="canvas"]
z_as_relative = false
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -215.0
offset_right = 155.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_3scn5")
flip_v = true

[node name="UpgradeMenu" type="TextureButton" parent="canvas" groups=["MenuButtons"]]
light_mask = 8
visibility_layer = 8
offset_left = 35.0
offset_top = 625.0
offset_right = 294.0
offset_bottom = 786.0
texture_normal = ExtResource("4_h4cb1")
ignore_texture_size = true
stretch_mode = 0

[node name="UpgBackround" type="Sprite2D" parent="canvas/UpgradeMenu"]
visible = false
clip_children = 2
z_index = 1
position = Vector2(273, -185)
scale = Vector2(1.19333, 1.3275)
texture = ExtResource("5_gqx5s")

[node name="IAPMenu" type="TextureButton" parent="canvas" groups=["MenuButtons"]]
light_mask = 8
visibility_layer = 8
offset_left = 8.0
offset_top = 88.0
offset_right = 120.0
offset_bottom = 215.0
texture_normal = ExtResource("7_51t22")
ignore_texture_size = true
stretch_mode = 0

[node name="IAPBackground" type="Sprite2D" parent="canvas/IAPMenu"]
visible = false
show_behind_parent = true
z_index = 1
position = Vector2(303, 422)
scale = Vector2(1.385, 1.32094)
texture = ExtResource("8_xbo1h")

[node name="PassiveUpgrade" type="TextureButton" parent="canvas" groups=["MenuButtons"]]
light_mask = 8
visibility_layer = 8
offset_left = 317.0
offset_top = 627.0
offset_right = 581.0
offset_bottom = 786.0
tooltip_text = "Upgrades passive rate of points"
texture_normal = ExtResource("5_gm1vf")
ignore_texture_size = true
stretch_mode = 0

[node name="PasBackground" type="Sprite2D" parent="canvas/PassiveUpgrade"]
visible = false
show_behind_parent = true
z_index = 1
position = Vector2(-19, -186)
scale = Vector2(1.28833, 1.30625)
texture = ExtResource("7_np1i2")

[node name="ShmoneyStore" type="TextureButton" parent="canvas" groups=["MenuButtons"]]
offset_left = 23.0
offset_top = 798.0
offset_right = 588.0
offset_bottom = 876.0
texture_normal = ExtResource("10_5lrp8")
ignore_texture_size = true
stretch_mode = 0

[node name="ShStoreBackground" type="Sprite2D" parent="canvas/ShmoneyStore"]
visible = false
z_index = 1
position = Vector2(269, -359)
scale = Vector2(1.25167, 1.27375)
texture = ExtResource("11_lkuwl")

[node name="SideMenu" type="Sprite2D" parent="canvas"]
position = Vector2(782, 458)
texture = ExtResource("6_2quv8")

[node name="SideMenu2" type="TextureButton" parent="canvas/SideMenu"]
offset_left = -240.0
offset_top = -52.0
offset_right = -190.0
offset_bottom = 58.0
toggle_mode = true

[node name="Back" type="TextureButton" parent="canvas" groups=["BackButton"]]
visible = false
z_index = 1
offset_left = 34.0
offset_top = 765.0
offset_right = 109.0
offset_bottom = 840.0
disabled = true
texture_normal = ExtResource("6_ondub")

[node name="MiscUp" type="CanvasLayer" parent="." groups=["Shops"]]
visible = false
script = ExtResource("14_w8sl8")

[node name="FlatCliUp" type="TextureButton" parent="MiscUp" groups=["MiscButtons"]]
visible = false
offset_left = 40.0
offset_top = 40.0
offset_right = 265.0
offset_bottom = 165.0
disabled = true
texture_normal = ExtResource("4_h4cb1")
ignore_texture_size = true
stretch_mode = 0

[connection signal="timeout" from="canvas/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="canvas/TextureButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="canvas/UpgradeMenu" to="." method="_on_upgrade_menu_pressed"]
[connection signal="pressed" from="canvas/IAPMenu" to="." method="_on_iap_menu_pressed"]
[connection signal="pressed" from="canvas/PassiveUpgrade" to="." method="_on_passive_menu_pressed"]
[connection signal="pressed" from="canvas/ShmoneyStore" to="." method="_on_shmoney_store_pressed"]
[connection signal="toggled" from="canvas/SideMenu/SideMenu2" to="." method="_on_side_menu_2_toggled"]
[connection signal="pressed" from="canvas/Back" to="." method="_back_button"]
[connection signal="visibility_changed" from="MiscUp" to="MiscUp" method="_toggle_buttons"]
[connection signal="pressed" from="MiscUp/FlatCliUp" to="MiscUp" method="_on_misc_shop_pressed" binds= [50, 2]]
